\name{alabaster.se News}
\title{alabaster.se News}
\encoding{UTF-8}

\section{Version 1.6.0}{\itemize{
\item Respect application-level overrides when saving the SummarizedExperiment base from the RangedSummarizedExperiment's \code{saveObject} method.
}}