@@ -4,4 +4,5 @@
 
 \section{Version 1.6.0}{\itemize{
 \item Respect application-level overrides when saving the SummarizedExperiment base from the RangedSummarizedExperiment's \code{saveObject} method.
+\item Preserve row names when setting the \code{rowRanges} in \code{readRangedSummarizedExperiment}.
 }}
